--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
             <version>1.18.16</version>
             <scope>provided</scope>
         </dependency>
+        <!--分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.11</version>
+        </dependency>
     </dependencies>
 
     <build>
